--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-markdown": "^2.5.0",
     "react-redux": "^5.0.5",
     "redux": "^3.7.2",
     "uuid": "^3.1.0"
