--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^15.6.1",
     "react-markdown": "^2.5.0",
     "react-redux": "^5.0.5",
+    "react-select": "^1.0.0-rc.5",
     "redux": "^3.7.2",
     "uuid": "^3.1.0"
   },
