--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Online Post-It Board",
   "main": "index.js",
   "scripts": {
-    "serve": "http-server ./dist"
+    "serve": "http-server ./dist",
+    "test": "jest",
+    "test:watch": "npm test -- --watch"
   },
   "author": "pafalium",
   "license": "ISC",
@@ -18,6 +20,7 @@
     "uuid": "^3.1.0"
   },
   "devDependencies": {
+    "babel-jest": "^20.0.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babelify": "^7.3.0",
@@ -26,19 +29,12 @@
     "gulp-buster": "^1.1.0",
     "gulp-html-replace": "^1.6.2",
     "gulp-streamify": "^1.0.2",
+    "jest": "^20.0.4",
     "vinyl-source-stream": "^1.1.0"
   },
   "browserify": {
     "transform": [
-      [
-        "babelify",
-        {
-          "presets": [
-            "es2015",
-            "react"
-          ]
-        }
-      ]
+      "babelify"
     ]
   }
 }
